--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
-}
+.Main{
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.Main-content{
+  display: flex;
+  align-items: flex-start;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Nav{
+  width: 200px;
+  height: -webkit-fill-available;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
 }
