style updated css

--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -36,3 +36,10 @@
   display: flex;
   flex-wrap: wrap;
 }
+.notFound{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 80vh;
+  flex-direction: column;
+}
