--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -1,6 +1,3 @@
-.Main{
-
-}
 .Main-content{
   display: flex;
   align-items: flex-start;
@@ -67,6 +64,8 @@
 .details-cast{
   display: flex;
   flex-wrap: wrap;
+  max-width: 90%;
+  margin: 30px auto;
 }
 .cast-single{
   width: 170px;
