--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -11,6 +11,7 @@
   position: fixed;
   left: 0;
   flex-direction: column;
+  background-color: rgb(244, 245, 247);
 }
 .Nav-active{
   background-color: rgba(0, 0, 0, 0.08);
@@ -82,6 +83,14 @@
   justify-content: space-between;
   align-items: center;
 }
+.details-additional{
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.details-additional p{
+  margin: 0 8px;
+}
 .cast-single{
   width: 170px;
   background-color: #fff;
@@ -93,6 +102,7 @@
   text-align: center;
   min-height: 100px;
   padding: 10px 0;
+  background-color: rgb(244, 245, 247);
 }
 .cast-single__info .character{
   text-overflow: ellipsis;
